# peft-study

./: .gitignore  pyproject.toml  readme.md  requirements.txt
Experiments/: LoRA-squad.ipynb  lora.ipynb  model_graph
Experiments/mlruns/0/: meta.yaml
Experiments/mlruns/174981238269013955/: meta.yaml
config/: app_config.yaml
config/dataset/: squad.yaml
config/model/: roberta-base.yaml
mlruns/861657804693440464/: meta.yaml
mlruns/861657804693440464/2800867821234a5a808f245f3904259a/: meta.yaml
mlruns/861657804693440464/3d09507744bd4c7db4251a817d74e2f8/: meta.yaml
mlruns/861657804693440464/5011fb82d54545788cd9408fea10cfd2/: meta.yaml
mlruns/861657804693440464/564c1c70396a415ab07f6141016e5225/: meta.yaml
mlruns/861657804693440464/91f3192f651f4bd09c5caa716dca606e/: meta.yaml
mlruns/861657804693440464/bf062b69bc114cd5b4c3781af2e72900/: meta.yaml
mlruns/861657804693440464/ca2f1120110843088b14fe5b44a73fd2/: meta.yaml
mlruns/861657804693440464/e877d26345e340a38fd57814d1ad5d25/: meta.yaml
mlruns/914599251833420896/: meta.yaml
mlruns/914599251833420896/011e9a5d4dce40b79da635f1dedd7be0/: meta.yaml
mlruns/914599251833420896/016463e9bd4d432e8baa2c843e17e961/: meta.yaml
mlruns/914599251833420896/020a56c348fe47b9a6f2f2eae169d477/: meta.yaml
mlruns/914599251833420896/051220fb242646d58afcf17a28c8013b/: meta.yaml
mlruns/914599251833420896/053d897b8183417fa8b90d1b8123375c/: meta.yaml
mlruns/models/model_mnist/: meta.yaml
model/: resnet.py
models/: LoRA.py
train/: train.py
utils/: gemm.py  mnist_shared.py  mnist_train.py
(+217 files in other folders)
