[tool.poetry]
name = "peft-study"
version = "0.1.0"
description = ""
authors = ["mathadoor <matharooh2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "2.12.1"
jupyter = "1.0.0"
torch = "2.3.0"
torchtext = "0.18.0"
torchvision = "0.18.0"
sacrebleu = "2.4.2"
hydra-core = "1.3.2"
omegaconf = "2.3.0"
bitarray = "2.9.2"
cython = "3.0.10"
torchdata = "0.7.1"
transformers = "^4.44.1"
datasets = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
